--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
     volumes:
       - ./data:/app/data
       - ./output:/app/output
+      - ./reports:/app/reports
       - ./logs:/app/logs
       - ./.env:/app/.env:ro
     restart: unless-stopped
@@ -42,6 +43,7 @@ services:
     volumes:
       - ./data:/app/data
       - ./output:/app/output
+      - ./reports:/app/reports
       - ./logs:/app/logs
       - ./.env:/app/.env:ro
     restart: unless-stopped
@@ -65,6 +67,7 @@ services:
     volumes:
       - ./data:/app/data
       - ./output:/app/output
+      - ./reports:/app/reports
       - ./logs:/app/logs
       - ./.env:/app/.env:ro
     restart: unless-stopped
