fix: Add scripts directory to production Docker images
Production Dockerfiles (*.prod) were missing the COPY scripts/ directive,
causing test_email_and_pdf.py and send_unified_email.py to be unavailable
inside containers.

This fix ensures the unified email system with fixed PDF generation
is available in all forecaster containers.

Changes:
- Dockerfile.7d.prod: Add COPY scripts/ ./scripts/
- Dockerfile.15d.prod: Add COPY scripts/ ./scripts/
- Dockerfile.30d.prod: Add COPY scripts/ ./scripts/
- Dockerfile.90d.prod: Add COPY scripts/ ./scripts/

Rebuilt all images and deployed containers successfully.

--- a/Dockerfile.15d.prod
+++ b/Dockerfile.15d.prod
@@ -21,6 +21,7 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy source code
 COPY src/ ./src/
+COPY scripts/ ./scripts/
 
 # Copy cron configuration
 COPY cron/15d/crontab /etc/cron.d/usdclp-15d
